Mobile version update

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
             </a>
             
             <ul class="nav-links">
-                <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#about">O mnie</a></li>
-                <li><a href="#projects">Projekty</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-                <li><a href="#contact" class="nav-cta">Napisz do mnie</a></li>
+                <li><a href="#home" class="active" data-icon="home">Home</a></li>
+                <li><a href="#about" data-icon="person">O mnie</a></li>
+                <li><a href="#projects" data-icon="work">Projekty</a></li>
+                <li><a href="#contact" data-icon="call">Kontakt</a></li>
             </ul>
             
             <button class="mobile-menu-btn" aria-label="Menu">
